force-app/src/objects/OrderApi__Sales_Order_R__c.object
<CustomObject>
    <description>The primary object for all Sales related transactions that track the Reporting currency when Fonteva&apos;s multi-currency is enabled.</description>
    <fields>
        <fullName>OrderApi__Amount_Paid__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>This value stores the sum of payments for each item in the Sales Order, in the reporting currency.</description>
        <inlineHelpText>This value stores the sum of payments for each item in the Sales Order, in the reporting currency.</inlineHelpText>
        <label>Amount Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OrderApi__Amount_Refunded__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>This value stores the sum of refunds for each item in the Sales Order, in the reporting currency.</description>
        <inlineHelpText>This value stores the sum of refunds for each item in the Sales Order, in the reporting currency.</inlineHelpText>
        <label>Amount Refunded</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OrderApi__Balance_Due__c</fullName>
        <description>This value contains the total remaining amount due for this order in the reporting currency.</description>
        <formula>OrderApi__Overall_Total__c - OrderApi__Amount_Paid__c + IF(OrderApi__Is_Invoiced__c, OrderApi__Amount_Refunded__c + OrderApi__Conversion_Gain_Loss__c , 0) - OrderApi__Credits_Applied__c + OrderApi__Credits_and_Adjustments__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This value contains the total remaining amount due for this order in the reporting currency.</inlineHelpText>
        <label>Balance Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OrderApi__Business_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relates the order to the Business Group.</description>
        <inlineHelpText>Relates the order to the Business Group.</inlineHelpText>
        <label>Business Group</label>
        <referenceTo>OrderApi__Business_Group__c</referenceTo>
        <relationshipLabel>Sales Orders (R)</relationshipLabel>
        <relationshipName>Sales_Orders_R</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Conversion_Gain_Loss__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>This value stores the sum of gains and losses created as a result of currency fluctuation for each item in the Sales Order, in the reporting currency.</description>
        <inlineHelpText>This value stores the sum of gains and losses created as a result of currency fluctuation for each item in the Sales Order, in the reporting currency.</inlineHelpText>
        <label>Conversion Gain/Loss</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OrderApi__Credits_Applied__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>This value stores the sum of credits applied for each item in the Sales Order, in the reporting currency.</description>
        <inlineHelpText>This value stores the sum of credits applied for each item in the Sales Order, in the reporting currency.</inlineHelpText>
        <label>Credits Applied</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OrderApi__Credits_and_Adjustments__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>This value stores the sum of adjustments for each item in the Sales Order, in the reporting currency.</description>
        <inlineHelpText>This value stores the sum of adjustments for each item in the Sales Order, in the reporting currency.</inlineHelpText>
        <label>Credit Notes/Adjustments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Invoiced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked when the related Sales Order Posting Entity set as Invoice. Inherits the value from related Sales Order Record.</description>
        <inlineHelpText>Checked when the related Sales Order Posting Entity set as Invoice. Inherits the value from related Sales Order Record.</inlineHelpText>
        <label>Is Invoiced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Overall_Total__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>This value stores the sum of the total price charged for each item in the Sales Order, in the reporting currency.</description>
        <inlineHelpText>This value stores the sum of the total price charged for each item in the Sales Order, in the reporting currency.</inlineHelpText>
        <label>Overall Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OrderApi__Sales_Order_Reference__c</fullName>
        <description>System field that creates a one to one relationship to a sales order.</description>
        <externalId>true</externalId>
        <inlineHelpText>System field that creates a one to one relationship to a sales order.</inlineHelpText>
        <label>Sales Order Reference</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Sales Order (R)</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Sales Order (R Name)</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Orders (R)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>